--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,7 +1,12 @@
+cloudinary==1.8.0
 dj-database-url==0.4.2
 dj-static==0.0.6
 Django==1.11.4
 django-widget-tweaks==1.4.1
+mock==2.0.0
+pbr==3.1.1
 python-decouple==3.1
 pytz==2017.2
+six==1.10.0
 static3==0.7.0
+urllib3==1.22
