--- a/package.json
+++ b/package.json
@@ -3,5 +3,8 @@
     "gulp": "^3.9.1",
     "gulp-sass": "^3.1.0",
     "sass": "^1.0.0-beta.5.2"
+  },
+  "devDependencies": {
+    "gulp-autoprefixer": "^4.1.0"
   }
 }
